--- a/app/pages.html/index.html
+++ b/app/pages.html/index.html
@@ -54,7 +54,7 @@
         <div class="simple-slider__button simple-slider__button_dir-prev"><i class="simple-slider__icon  icon-left-open"></i></div>
         <div class="simple-slider__item">
             <div class="simple-slider__img" data-img-realsrc="images/simple-slider-03.jpg"></div>
-            <!-- S -->
+            <!-- <div class="simple-slider__info"><a href="#" class="simple-slider__link">СВАДЕБНЫЙ ОБРАЗ<br/>Создаю нежные и романтические свадебные образы для невест, а также выполню образы для мам и гостей</a></div> -->
         </div>
         <div class="simple-slider__item">
             <div class="simple-slider__img" data-img-realsrc="images/simple-slider-02.jpg"></div>
