change structure simple-slider dom

--- a/app/pages.html/index.html
+++ b/app/pages.html/index.html
@@ -52,18 +52,22 @@
     <div class="simple-slider" id="sSlider">
         <div class="simple-slider__icon-loaded"><i class="simple-slider__icon icon-spin animate-spin"></i></div>
         <div class="simple-slider__button simple-slider__button_prev"><i class="simple-slider__icon  icon-left-open"></i></div>
-        <div class="simple-slider__item">
+
+        <div class="simple-slider__item" data-title="ОБРАЗ НА ФОТОСЕССИЮ" data-description="Яркие образы для фотосессий по вашему желанию">
             <div class="simple-slider__img" data-img-realsrc="images/simple-slider-03.jpg"></div>
-            <!-- <div class="simple-slider__info"><a href="#" class="simple-slider__link">СВАДЕБНЫЙ ОБРАЗ<br/>Создаю нежные и романтические свадебные образы для невест, а также выполню образы для мам и гостей</a></div> -->
         </div>
-        <div class="simple-slider__item">
+        <div class="simple-slider__item" data-title="СВАДЕБНЫЙ ОБРАЗ" data-description="Создаю нежные и романтические свадебные образы для невест, а также выполню образы для мам и гостей">
             <div class="simple-slider__img" data-img-realsrc="images/simple-slider-02.jpg"></div>
-            <!-- <div class="simple-slider__info"><a href="#" class="simple-slider__link">СВАДЕБНЫЙ ОБРАЗ<br/>Создаю нежные и романтические свадебные образы для невест, а также выполню образы для мам и гостей</a></div> -->
         </div>
-        <div class="simple-slider__item" style="opacity: 1; z-index: 1;">
+        <div class="simple-slider__item" style="opacity: 1; z-index: 1;" data-title="ОБРАЗ НА МЕРОПРИЯТИЕ" data-description="Образ на любое мероприятие - вечерний, выпускной, все что захочется">
             <div class="simple-slider__img" data-img-realsrc="images/simple-slider-01.jpg" style="background-image: url(images/simple-slider-01.jpg)"></div>
-            <!-- <div class="simple-slider__info"><a href="#" class="simple-slider__link">ОБРАЗ НА ФОТОСЕССИЮ<br/>Яркие образы для фотосессий по вашему желанию</a></div> -->
         </div>
+        
+        <div class="simple-slider__container-info">
+            <div class="simple-slider__title-info"></div>
+            <div class="simple-slider__description-info"></div>
+        </div>
+
 
         <div class="simple-slider__button simple-slider__button_next"><i class="simple-slider__icon icon-right-open"></i></div>
         <div class="simple-slider__button simple-slider__button_play-pause"><i class="simple-slider__icon icon-play"></i></div>
