--- a/app/pages.html/index.html
+++ b/app/pages.html/index.html
@@ -59,7 +59,7 @@
         <div class="simple-slider__item" data-title="СВАДЕБНЫЙ ОБРАЗ" data-description="Создаю нежные и романтические свадебные образы для невест, а также выполню образы для мам и гостей">
             <div class="simple-slider__img" data-img-realsrc="images/simple-slider-02.jpg"></div>
         </div>
-        <div class="simple-slider__item" style="opacity: 1; z-index: 1;" data-title="ОБРАЗ НА МЕРОПРИЯТИЕ" data-description="Образ на любое мероприятие - вечерний, выпускной, все что захочется">
+        <div class="simple-slider__item"  data-title="ОБРАЗ НА МЕРОПРИЯТИЕ" data-description="Образ на любое мероприятие - вечерний, выпускной, все что захочется">
             <div class="simple-slider__img" data-img-realsrc="images/simple-slider-01.jpg" style="background-image: url(images/simple-slider-01.jpg)"></div>
         </div>
         
