--- a/app/pages.html/index.html
+++ b/app/pages.html/index.html
@@ -53,7 +53,7 @@
         <div class="simple-slider__icon-loaded"><i class="simple-slider__icon icon-spin animate-spin"></i></div>
         <div class="simple-slider__button simple-slider__button_prev"><i class="simple-slider__icon  icon-left-open"></i></div>
 
-        <div class="simple-slider__item" data-title="ОБРАЗ НА ФОТОСЕССИЮ" data-description="Яркие образы для фотосессий по вашему желанию">
+        <div class="simple-slider__item" data-title="ОБРАЗ НА ФОТОСЕССИЮ" data-description="Яркие образы для фотосессий<br/> по вашему желанию">
             <div class="simple-slider__img" data-img-realsrc="images/simple-slider-03.jpg"></div>
         </div>
         <div class="simple-slider__item" data-title="СВАДЕБНЫЙ ОБРАЗ" data-description="Создаю нежные и романтические свадебные образы для невест, а также выполню образы для мам и гостей">
@@ -64,7 +64,7 @@
         </div>
         
         <div class="simple-slider__container-info">
-            <div class="simple-slider__title-info">ОБРАЗ НА ФОТОСЕССИЮ </div>
+            <div class="simple-slider__title-info"></div>
             <div class="simple-slider__description-info">Яркие образы для фотосессий<br/> по Вашему желанию</div>
         </div>
 
