--- a/app/pages.html/aboutMe.html
+++ b/app/pages.html/aboutMe.html
@@ -47,7 +47,7 @@
         </nav>
     </header>
     <div class="container-content">
-        <div class="text-block text-block_half"></div>
+        <div class="text-block text-block_half">111</div>
         <div class="photo-block photo-block_half"></div>
     </div>
     
