--- a/app/pages.html/aboutMe.html
+++ b/app/pages.html/aboutMe.html
@@ -11,7 +11,7 @@
 </head>
 <body class="page">
     <header class="header">
-        <div class="header__logotype logotype">
+        <div class="header__logotype logotype logotype_theme-grey">
             <div class="logo logo_theme-color-70 logotype__logo-img"></div>
             <div class="logotype__logo-text">
                 <div class="logotype__logo-name">Татьяна Соловьева</div>
@@ -19,8 +19,8 @@
             </div>
             <a class="logotype__tel" href="tel:+7(950)0234329">☏  +7 (950) 023-43-29</a>
         </div>
-        <nav class="nav-menu header__nav nav-menu_theme-transparent">
-                 <div class="button-menu nav-menu__button" data-toggle="drop-down" data-target="nav-menu__drop-down">
+        <nav class="nav-menu header__nav nav-menu_theme-lightgrey">
+                 <div class="button-menu nav-menu__button button-menu_theme-grey" data-toggle="drop-down" data-target="nav-menu__drop-down">
                      <div class="button-menu__area-pointer">
                          <span class="button-menu__line button-menu__line_top"></span>
                          <span class="button-menu__line button-menu__line_middle"></span>
@@ -47,9 +47,9 @@
         </nav>
     </header>
     <div class="container-content">
-        <div class="text-block text-block_half">111</div>
+        <div class="text-block text-block_half"></div>
         <div class="photo-block photo-block_half"></div>
     </div>
-    
+<script src="app.js"></script>    
 </body>
 </html>
