--- a/app/pages.html/aboutMe.html
+++ b/app/pages.html/aboutMe.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="fontello.css" type="text/css" media="all">
     <title>Обо мне</title>
 </head>
-<body class="page">
+<body>
+    <div class="page">
     <header class="header">
         <div class="header__logotype logotype logotype_theme-grey">
             <div class="logo logo_theme-color-70 logotype__logo-img"></div>
@@ -48,7 +49,10 @@
     </header>
     <div class="container-content">
         <div class="text-block text-block_half"></div>
-        <div class="photo-block photo-block_half"></div>
+        <div class="photo-block photo-block_half">
+            <img src="/images/me.png" alt="me" class="photo-block__single-img">
+        </div>
+    </div>
     </div>
 <script src="app.js"></script>    
 </body>
