--- a/app/pages.html/index.html
+++ b/app/pages.html/index.html
@@ -10,7 +10,8 @@
     <title>Главная</title>
     <!--<script src="https://yastatic.net/jquery/3.1.1/jquery.js"></script>-->
 </head>
-<body class="page">
+<body>
+<div class="page">
 <header class="header">
     <div class="header__logotype logotype">
         <div class="logo logo_theme-color-70 logotype__logo-img"></div>
@@ -92,7 +93,7 @@
         <div class="simple-slider__button simple-slider__button_play-pause"><i class="simple-slider__icon simple-slider__icon_play-pause icon-play"></i></div>
         <div class="simple-slider__scrim"></div>
     </div>
-
+</div>
 <script src="app.js"></script>
 </body>
 </html>
