--- a/app/pages.html/aboutMe.html
+++ b/app/pages.html/aboutMe.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page">
     <header class="header">
-        <div class="header__logotype logotype logotype_theme-grey">
+        <div class="header__logotype logotype logotype_theme-white">
             <div class="logo logo_theme-color-70 logotype__logo-img"></div>
             <div class="logotype__logo-text">
                 <div class="logotype__logo-name">Татьяна Соловьева</div>
